@@ -7,28 +7,30 @@ plugins {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compile project("tfs-sdk")
-    compile "com.jetbrains.rd:rd-framework:$rdGenVersion"
+    implementation project("tfs-sdk")
+    implementation "com.jetbrains.rd:rd-framework:$rdGenVersion"
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
+}
+
+kotlin {
+    jvmToolchain(21)
 }
 
 compileKotlin {
     dependsOn ':client:protocol:rdgen'
-    kotlinOptions.jvmTarget = '11'
 }
 
-compileTestKotlin {
-    kotlinOptions.jvmTarget = '11'
+application {
+    mainClass = "com.microsoft.tfs.MainKt"
+    // The TFS SDK loads a native library; JDK 21+ requires explicit permission for that.
+    applicationDefaultJvmArgs = ["--enable-native-access=ALL-UNNAMED"]
 }
-
-mainClassName = "com.microsoft.tfs.MainKt"
 
 evaluationDependsOnChildren() // to get properties of tfs-sdk subproject
 
 task docs(type: Copy, dependsOn: ["tfs-sdk:downloadArchive", "tfs-sdk:verifyArchive"]) {
-    def docs = file("$buildDir/docs")
+    def docs = file("${layout.buildDirectory.get().asFile}/docs")
 
     def tfsSdk = project("tfs-sdk")
     def sdkVersion = tfsSdk.ext.sdkVersion
